--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
+
+
+.header {
+  height: 11vh;
+  width: 100vw;
+  background-color: #AB2A19;
+  position: relative;
+  color: white;
+  top: 0;
+  margin-bottom: 80px;
+  display: flex;
+  align-items: center;
+  padding-left: 150px;
+  font-size: 70px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dashboard {
+  height: 10vh;
+  width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 180px;
+}
+
+.products_dashboard {
+  height: 50%;
+  width: 50%;
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+  left: 0;
+  position: relative;
+  padding-left: 80px;
+}
+
+.product_main {
+  height: 275px;
+  width: 600px;
+  background-color: #D34735;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 6px;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  right: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-main {
+  top: 190px;
+  right: 10%;
+  height: 550px;
+  width: 480px;
+  /* position: relative; */
+  background-color: #3ad886;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 6px;
+  position: absolute;
+}
+
+.product_img {
+  height: 90%;
+  width: 55%;
+  margin-left: -20px;
+}
+
+.form-img {
+  height: 220px;
+  width: 360px;
+  background-color: lightgray;
+  
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 30%;
+  padding: 20px;
+}
+
+input {
+  height: 20px;
+  width: 85%;
+}
+
+.form-buttons {
+  display: flex;
+  height: 10%;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  border-radius: 6px;
+  border-style: none;
+}
+
+.cancel-button {
+  padding: 10px 20px;
+  margin-left: 30px;
+  background-color: #ed6b5a
+}
+
+.add-button {
+  padding: 10px 30px;
+  margin-right: 30px;
+  background-color: #ed6b5a
+}
+
+.dash-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.delete-btn {
+  background-color: #3ad886;
+  padding: 10px 20px;
+  margin-right: -20px;
+}
+
+.edit-btn {
+  background-color: #3ad886;
+  padding: 10px 20px;
 }
